<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_results_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EFF1F6">

    <TextView
...
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        style="@style/RobotoMonoText"
        android:text="@string/search_results"/>

    <Button
        android:id="@+id/add_new_foodstuff_button"
        style="@style/VioletButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:text="@string/add_new_foodstuff" />

    <TextView
        android:id="@+id/nothing_found_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        style="@style/RobotoMonoHintText"
        android:textSize="14sp"
        android:text="@string/nothing_found"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</LinearLayout>
