...
    <string name="product_name">Название продукта</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="enter_recipe_name">Введите название рецепта</string>
    <string name="recipe_name">Название рецепта</string>
    <string name="start">Для добавления продукта нажмите на +</string>
    <string name="search">Поиск…</string>
    <string name="calculator">Калькулятор</string>
    <string name="list_of_foodstuffs">Продукты</string>
    <string name="per_100_g">(на 100 грамм)</string>
    <string name="history">Журнал</string>
    <string name="pref_first_start">is it the first start</string>
    <string name="welcome">Добро пожаловать! Для начала укажите информацию о себе для рассчёта нормы калорий и БЖУ.</string>
...
        Белки - %2$.1f\n
        Жиры - %3$.1f\n
        Углеводы - %4$.1f\n
        Калорийность - %5$.1f\n</string>
    <string name="foodstuff_name_and_weight">%1$s, %2$.0f г</string>
    <string name="user_goal_finish_button_text">далее</string>
    <string name="top_header">Популярное</string>
    <string name="all_foodstuffs_header">Все продукты</string>
    <string name="foodstuffs">Продукты</string>
    <string name="profile">Профиль</string>
    <string name="create_new_foodstuff">Новый</string>
    <string name="weight_in_card">Масса, граммов</string>
    <string name="add_foodstuff">Добавить продукт</string>
    <string name="add_foodstuff_to_recipe">В рецепт</string>
...
